[package]
name = "chronos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
regex = "1.5.4"

[dependencies.serenity]
version = "0.10.9"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "cache"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]